--- a/paper/src/evaluation.tex
+++ b/paper/src/evaluation.tex
@@ -48,7 +48,7 @@ interconnection network inside Amazon EC2 in the region.
 
 Here, vCPUs means the number of virtual CPUs in the instance, 
 and a single ECU~(Amazon EC2 Compute Unit) provides the equivalent CPU capacity
-of a 1.0-1.2GHz 2007 Opteron or 2007 Xeon processor \kento{???}.
+of a 1.0-1.2GHz 2007 Opteron or 2007 Xeon processor \cite{AMAZON_AWS}.
 For the shared cloud storage, we use Amazon S3 mounted by sshfs\cite{sshfs}.
 
 \subsection{I/O Performance of A single compute node}
