--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -34,9 +34,7 @@
 		Tokyo Institute of Technology\\
 		2-12-1-W8-33, Ohokayama,\\
 		Meguro-ku, Tokyo 152-8552 Japan\\
-		\kento{Begins form ``J" instead of ``j" ?}
-		\\
-	Email: Jyo.t.aa@m.titech.ac.jp}
+	Email: yo.t.aa@m.titech.ac.jp}
 	\and
 	\IEEEauthorblockN{Kento Sato}
 	\IEEEauthorblockA{Center for Applied Scientific Computing\\
@@ -57,7 +55,6 @@
 
 %start abstract
 \begin{abstract}
-\kento{I'd like to shorten this abstract \ldots}
 Cloud computing offers high computational resources, scalability, as well as
 ease of access.
 %Such cloud environments offer those who have limited local computational
@@ -101,11 +98,8 @@ accelerate I/O performance for data intensive applications.
 To explore the effectiveness of cloud-based burst buffers, 
 We implement a prototype, and evaluate the system in Amazon
 EC2/S3.
-\kento{Let us describe about the modeling.}
-The \xtqmod{quantitative} experimental and simulation evaluations show that our prototype system
+The experimental and simulation evaluations show that our prototype system
 can achieve up to 1.5 times improvement in the execution time of real applications.
-\kento{Let us include ``quantitative'' results of both experimental results and
-simulation results.}
 \end{abstract}
 
 %start key word
@@ -144,9 +138,8 @@ simulation results.}
 This work was performed under the auspices of the U.S. Department of Energy by
 Lawrence Livermore National Laboratory under Contract DE-AC52-07NA27344.
 (LLNL-CONF-663584-DRAFT).
-\xtqmod{ This research was supported by JST, CREST (Research Area: Advanced Core Technologies for
-Big Data Integration).}
-\kento{Please add EBD Crest acknowledgment}
+This research was supported by JST, CREST (Research Area: Advanced Core Technologies for
+Big Data Integration).
 This research made use of Montage, funded by the National Aeronautics and Space Administration's
 Earth Science Technology Office, Computation Technologies Project, under
 Cooperative Agreement Number NCC5-626 between NASA and the California Institute
