--- a/paper/src/background.tex
+++ b/paper/src/background.tex
@@ -288,7 +288,7 @@ these data intensive workloads.
 
 \begin{figure}
 \centering
-\includegraphics[width=8cm]{img/point_to_point}
+\includegraphics[width=8cm]{img/point_to_point-2}
 \caption{Point-to-point communication throughput in Amazon EC2}
 \label{background:Amazon point to point throughput}
 \end{figure}
