--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -104,7 +104,7 @@ can achieve up to 1.5 times improvement in the execution time of real applicatio
 
 %start key word
 \begin{IEEEkeywords}
-	cloud computing, burst buffer
+	cloud computing, burst buffer, data intensive applications
 \end{IEEEkeywords}
 
 \IEEEpeerreviewmaketitle
