--- a/paper/src/implementation.tex
+++ b/paper/src/implementation.tex
@@ -1,7 +1,7 @@
 \section{Design and Implementation of Our Cloud-based Burst Buffer System}
 \label{sec:implementation}
-To achieve the challenges, we design and implement our cloud-based burst buffer.
-\kento{Will write more later \ldots}
+% To achieve the challenges, we design and implement our cloud-based burst buffer.
+% \kento{Will write more later \ldots}
 
 \subsection{The Role of The Cloud-base Burst Buffers}
 \begin{figure}[tb]
