--- a/paper/src/introduction.tex
+++ b/paper/src/introduction.tex
@@ -81,7 +81,7 @@ buffers, we can accelerate the access performance to the data
 \cite{montage,povray}.
 In addition, if we apply burst buffers to clouds, we can build on-demand burst
 buffers by taking advantage of the elasticity in clouds. 
-\kento{local storage use ? in-memory}
+%\kento{local storage use ? in-memory}
 To explore the effectiveness of burst buffers in clouds, 
 we implement a prototype of a cloud-based burst buffer system, and models the
 system to estimate execution time of data intensive applications.
@@ -96,12 +96,12 @@ Our contributions can be summarized as following:
 \begin{itemize}
 	\item A cloud-based burst buffer system accelerating data intensive
 	workloads in cloud environments;
-	\item \kento{Let us include modeling when we finish the section, and the
-	evaluation}
+	\item Models estimating I/O throughput in a real cloud environment
 	\item Improvement of I/O performance by using our cloud-based burst buffer
 	system in Amazon EC2;
     \item Quantitative evaluations targeting real environments where
-    multiple real applications run, and access to the cloud-based burst buffers;
+    multiple real applications run, and access to the cloud-based burst
+    buffers;
 \end{itemize}
 %2
 \par
