--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -9,6 +9,7 @@
 \usepackage{comment}
 \usepackage[cmex10]{amsmath}
 \usepackage{colortbl}
+\usepackage{url}
 
 \definecolor{darkgray}{gray}{0.7}
 \definecolor{lightgray}{gray}{0.9}
@@ -34,7 +35,7 @@
 		Tokyo Institute of Technology\\
 		2-12-1-W8-33, Ohokayama,\\
 		Meguro-ku, Tokyo 152-8552 Japan\\
-	Email: yo.t.aa@m.titech.ac.jp}
+	Email: jyo.t.aa@m.titech.ac.jp}
 	\and
 	\IEEEauthorblockN{Kento Sato}
 	\IEEEauthorblockA{Center for Applied Scientific Computing\\
@@ -99,7 +100,8 @@ To explore the effectiveness of cloud-based burst buffers,
 We implement a prototype, and evaluate the system in Amazon
 EC2/S3.
 The experimental and simulation evaluations show that our prototype system
-can achieve up to 1.5 times improvement in the execution time of real applications.
+can achieve up to 2.5 times improvement in the execution time of real
+applications.
 \end{abstract}
 
 %start key word
