--- a/paper/src/implementation.tex
+++ b/paper/src/implementation.tex
@@ -6,8 +6,8 @@
 \subsection{The Role of The Cloud-base Burst Buffers}
 \begin{figure}[tb]
 	\centering
-	\includegraphics[width=8cm]{img/architecture_overview-2}
-	\caption{overall illustrate of I/O Burst Buffer Architecture}
+	\includegraphics[width=6cm]{img/architecture_overview-2}
+	\caption{The role of the cloud-based burst buffers}
 	\label{architecture:overview}
 \end{figure}
 
