--- a/paper/src/introduction.tex
+++ b/paper/src/introduction.tex
@@ -88,7 +88,8 @@ system to estimate execution time of data intensive applications.
 Our experimental results using Amazon EC2 shows that we achieve 3 times of
 improvement in read throughput, and 4 times in write throughput with 8 nodes of
 burst buffers. Our simulation based on the model shows that we can
-improve execution time of real data intensive applications by 1.5 times in execution time.
+improve execution time of real data intensive applications by 2.5 times in
+execution time.
 \par
 
 
@@ -107,9 +108,8 @@ Our contributions can be summarized as following:
 \par
 The rest of this paper is organized as follows. 
 In Section \ref{sec:background}, we describe the background and the motivation.
-Then, we introduce an overview of the cloud-based burst buffer system in Section \ref{sec:architecture}, 
-and describe the details about our prototype implementation in Section \ref{sec:implementation}.
-Next, in Section \ref{sec:evaluation}, we present our experimental results
-of the cloud-based burst buffer system.
+Then, we describe the details of our cloud-based burst buffer system
+implementation in Section \ref{sec:implementation}, and the modeling in Section
+\ref{sec:modeling}. Next, in Section \ref{sec:evaluation}, we present our experimental results of the cloud-based burst buffer system.
 Finally, we describe related work in Section \ref{sec:related work}, and
 conclusion in Section \ref{sec:conclusion}.
